Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </p>
   </header>
   <div>
-      <p>In this article, we take a deeper dive into the various benchmark exercise times and weights for the 2019 CrossFit Open athletes, including sprinting, running, squat, deadlift, clean &amp; jerk, and snatch.</p>
+      <p>In this article, we take a deeper dive into the benchmark exercise times and weights for the 2019 CrossFit Open athletes, including sprinting, running, squat, deadlift, clean &amp; jerk, and snatch.</p>
         <br>
         <a class="btn" href="https://leblancfg.com/crossfit_open_2019_analysis_exercise_statistics.html#crossfit_open_2019_analysis_exercise_statistics">    Continue reading
 </a>
@@ -166,7 +166,7 @@
     </p>
   </header>
   <div>
-      <p>In this article, we disect the various physical, strength and athletic attributes of hundreds of thousands of 2019 CrossFit Open athletes.</p>
+      <p>In this article, we disect the various physical, strength and athletic attributes of hundreds of thousands of 2019 CrossFit Open athletes as self-reported in their athlete profiles.</p>
         <br>
         <a class="btn" href="https://leblancfg.com/crossfit_open_2019_analysis_athlete_statistics.html#crossfit_open_2019_analysis_athlete_statistics">    Continue reading
 </a>
