Generate Pelican site

--- a/crossfit_open_2019_analysis_benchmark_workouts.html
+++ b/crossfit_open_2019_analysis_benchmark_workouts.html
@@ -1298,8 +1298,8 @@ h6:hover .anchor-link {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<blockquote><p><a href="https://leblancfg.com/crossfit_open_2019_analysis_athlete_statistics.html">Part 1: <strong>Athlete Statistics</strong></a>
-<a href="https://leblancfg.com/crossfit_open_2019_analysis_exercise_statistics.html">Part 3: <strong>Exercise Statistics</strong></a></p>
+<blockquote><p><a href="https://leblancfg.com/crossfit_open_2019_analysis_athlete_statistics.html">Part 1: <strong>Athlete Statistics</strong></a></p>
+<p><a href="https://leblancfg.com/crossfit_open_2019_analysis_exercise_statistics.html">Part 3: <strong>Exercise Statistics</strong></a></p>
 </blockquote>
 <p>I've collected profile data for the 1,706,699 CrossFit athletes that have ever (presumably) participated in the CrossFit Open. Having all these statistics in one place is useful as a reference for comparison, and interesting to see how Open athletes fill their profile.</p>
 <p>In this article, we'll take a final look at some benchmark CrossFit workouts included in the athlete self-reported statistics. These include the famous Fran and Grace, as well as some more obscure ones like Filthy Fifty.</p>
