Generate Pelican site

--- a/crossfit_open_2019_analysis_benchmark_workouts.html
+++ b/crossfit_open_2019_analysis_benchmark_workouts.html
@@ -1813,7 +1813,7 @@ if (outputEl) {{
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>We see here first a very big difference in overall numbers between men and women, as tracking &mdash; or at least entering &mdash; those numbers seem to be much more popular with the former.</p>
 <p>For the men, we see a peak for the 175-179 second bin, where we see athletes pushing to get their times under 3 minutes. A lofty goal indeed! There are similar but less pronounced peaks at and before round numbers.</p>
-<p>For the women, that elongated peak shape is more evenlu distributed around five minutes, with many athletes under than all-important 5 minute mark.</p>
+<p>For the women, that elongated peak shape is more evenly distributed around five minutes, with many athletes under than all-important 5 minute mark.</p>
 
 </div>
 </div>
