Generate Pelican site

--- a/crossfit_open_2019_analysis_benchmark_workouts.html
+++ b/crossfit_open_2019_analysis_benchmark_workouts.html
@@ -2643,6 +2643,9 @@ if (outputEl) {{
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>We see here large peaks at 250, 300 and 400, and apparently some participants cranking numbers past 500. An interesting metric in itself, I have the impression that I would use this benchmark in a later blog post focusing on predicting factors for high placements in the Open.</p>
+<blockquote><p><a href="https://leblancfg.com/crossfit_open_2019_analysis_athlete_statistics.html">Part 1: <strong>Athlete Statistics</strong></a></p>
+<p><a href="https://leblancfg.com/crossfit_open_2019_analysis_exercise_statistics.html">Part 3: <strong>Exercise Statistics</strong></a></p>
+</blockquote>
 
 </div>
 </div>
