Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </p>
   </header>
   <div>
-      <p>In this article, we benchmark various methods to write data to MS SQL Server from pandas DataFrames to see which is the fastest. We compare 'multi', 'fast_executemany' and turbodbc and find the best candidate.</p>
+      <p>In this article, we benchmark various methods to write data to MS SQL Server from pandas DataFrames to see which is the fastest. We compare <code>multi</code>, <code>fast_executemany</code> and <code>turbodbc</code>, and find the best candidate.</p>
         <br>
         <a class="btn" href="https://leblancfg.com/benchmarks_writing_pandas_dataframe_SQL_Server.html#benchmarks_writing_pandas_dataframe_SQL_Server">    Continue reading
 </a>
