Generate Pelican site

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -124,10 +124,10 @@
   </header>
   <div>
 <p>Here's a short list of projects I've undertaken in the past.</p>
-<h2>autocrop.io</h2>
-<p><a href="https://github.com/leblancfg/autocrop">Open source project</a>, currently working on API server and self-hosted service. Perfect for profile picture processing for your website or batch work for ID cards, autocrop will output images centered around the biggest face detected.</p>
+<h2>autocrop</h2>
+<p><a href="https://leblancfg.com/autocrop">Open source project</a> autocrop finds faces in your pictures and automatically crops them. Perfect for profile picture processing for your website or batch work for ID cards, autocrop will output images centered around the biggest face detected. Developed a prototype for a <a href="https://github.com/leblancfg/test_fastapi">fast API server</a>, ultimatley shelved. </p>
 <blockquote>
-<p>Visit the <a href="https://autocrop.io">website here</a>.</p>
+<p>Visit the <a href="https://leblancfg.com/autocrop">website here</a>.</p>
 </blockquote>
 <h2>Bayesian Inference Study Group</h2>
 <p>Put together this little website to serve as a backdrop for a series of study group sessions organized internally for public servants across the Canadian Government. We are currently follwing John Kruschke's Doing Bayesian Data Analysis textbook, 2<sup>nd</sup> edition.</p>
