Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -119,10 +119,10 @@
         </a>
       </li>
       <li>
-        <a class="sc-twitter"
-           href="https://twitter.com/leblancfg1"
+        <a class="sc-mastodon"
+rel="me"           href="https://fosstodon.org/@leblancfg"
            target="_blank">
-          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-mastodon"></i>
         </a>
       </li>
       <li>
@@ -156,6 +156,11 @@
   <div>
     <dl>
 
+          <dt>December 07, 2022</dt>
+
+        <dd>
+          <a href="https://leblancfg.com/data-bus-pattern-for-data-engineering.html">The Data Bus: a helpful pattern for data engineering</a>
+        </dd>
           <dt>March 15, 2020</dt>
 
         <dd>
