--- a/benchmarks_writing_pandas_dataframe_SQL_Server.html
+++ b/benchmarks_writing_pandas_dataframe_SQL_Server.html
@@ -128,10 +128,10 @@
         </a>
       </li>
       <li>
-        <a class="sc-twitter"
-           href="https://twitter.com/leblancfg1"
+        <a class="sc-mastodon"
+rel="me"           href="https://fosstodon.org/@leblancfg"
            target="_blank">
-          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-mastodon"></i>
         </a>
       </li>
       <li>
@@ -1379,10 +1379,10 @@ span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 
 
 
 
-<div id="e4773042-8eaf-4a1a-9600-5c012cb95abe"></div>
+<div id="514f4828-34d6-43f1-b405-e340edd0e7ac"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#e4773042-8eaf-4a1a-9600-5c012cb95abe');
+var element = $('#514f4828-34d6-43f1-b405-e340edd0e7ac');
 
             setTimeout(function() {
                 var nbb_cell_id = 1;
@@ -1466,10 +1466,10 @@ No sqlalchemy_turbodbc version available
 
 
 
-<div id="e831f9af-0a3b-4746-ae13-d7e02b66744f"></div>
+<div id="98ebc0b9-3be7-4357-ad56-c7d4eeacf28f"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#e831f9af-0a3b-4746-ae13-d7e02b66744f');
+var element = $('#98ebc0b9-3be7-4357-ad56-c7d4eeacf28f');
 
             setTimeout(function() {
                 var nbb_cell_id = 20;
@@ -1536,10 +1536,10 @@ var element = $('#e831f9af-0a3b-4746-ae13-d7e02b66744f');
 
 
 
-<div id="bf276649-ab7e-4632-bc17-5bc7b49ec5ea"></div>
+<div id="6ea52194-6163-4c64-be48-26fb2234fa1e"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#bf276649-ab7e-4632-bc17-5bc7b49ec5ea');
+var element = $('#6ea52194-6163-4c64-be48-26fb2234fa1e');
 
             setTimeout(function() {
                 var nbb_cell_id = 3;
@@ -1717,10 +1717,10 @@ var element = $('#bf276649-ab7e-4632-bc17-5bc7b49ec5ea');
 
 
 
-<div id="18802176-038d-4427-8bf1-3c5e9099a48d"></div>
+<div id="046ba03c-4b01-4ca2-8551-03d53953b140"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#18802176-038d-4427-8bf1-3c5e9099a48d');
+var element = $('#046ba03c-4b01-4ca2-8551-03d53953b140');
 
             setTimeout(function() {
                 var nbb_cell_id = 4;
@@ -1778,10 +1778,10 @@ var element = $('#18802176-038d-4427-8bf1-3c5e9099a48d');
 
 
 
-<div id="a58dc4bc-7a8e-4c28-9dfd-3d2077b071f5"></div>
+<div id="0024d3fd-eecd-4770-8dfb-ad77b657c7d4"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#a58dc4bc-7a8e-4c28-9dfd-3d2077b071f5');
+var element = $('#0024d3fd-eecd-4770-8dfb-ad77b657c7d4');
 
             setTimeout(function() {
                 var nbb_cell_id = 5;
@@ -1855,10 +1855,10 @@ var element = $('#a58dc4bc-7a8e-4c28-9dfd-3d2077b071f5');
 
 
 
-<div id="4533619f-ed1a-4ff6-b477-52318c111ab0"></div>
+<div id="8d0eb26a-504a-4801-a29c-95726bc45dca"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#4533619f-ed1a-4ff6-b477-52318c111ab0');
+var element = $('#8d0eb26a-504a-4801-a29c-95726bc45dca');
 
             setTimeout(function() {
                 var nbb_cell_id = 6;
@@ -1937,10 +1937,10 @@ var element = $('#4533619f-ed1a-4ff6-b477-52318c111ab0');
 
 
 
-<div id="982d40bf-3385-43c1-91ab-fc8022bd0f8f"></div>
+<div id="a67bc9f3-8613-4dea-b06c-ddaffafd7db2"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#982d40bf-3385-43c1-91ab-fc8022bd0f8f');
+var element = $('#a67bc9f3-8613-4dea-b06c-ddaffafd7db2');
 
             setTimeout(function() {
                 var nbb_cell_id = 7;
@@ -2002,10 +2002,10 @@ var element = $('#982d40bf-3385-43c1-91ab-fc8022bd0f8f');
 
 
 
-<div id="68d88eaf-cf1c-4699-971a-3846c9644ad9"></div>
+<div id="38431e83-3619-403e-9318-7065c8aa7ab3"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#68d88eaf-cf1c-4699-971a-3846c9644ad9');
+var element = $('#38431e83-3619-403e-9318-7065c8aa7ab3');
 
             setTimeout(function() {
                 var nbb_cell_id = 8;
@@ -2073,10 +2073,10 @@ var element = $('#68d88eaf-cf1c-4699-971a-3846c9644ad9');
 
 
 
-<div id="ec94af23-e0c7-4732-a23c-18ca69e9b2b3"></div>
+<div id="384cd7de-87bb-4cbb-8a10-29970e707564"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#ec94af23-e0c7-4732-a23c-18ca69e9b2b3');
+var element = $('#384cd7de-87bb-4cbb-8a10-29970e707564');
 
             setTimeout(function() {
                 var nbb_cell_id = 9;
@@ -2151,10 +2151,10 @@ var element = $('#ec94af23-e0c7-4732-a23c-18ca69e9b2b3');
 
 
 
-<div id="6ad04476-4c4a-404c-a762-baf301d56e32"></div>
+<div id="8465b7bb-b31d-4dd6-956b-861d6ed7038a"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#6ad04476-4c4a-404c-a762-baf301d56e32');
+var element = $('#8465b7bb-b31d-4dd6-956b-861d6ed7038a');
 
             setTimeout(function() {
                 var nbb_cell_id = 10;
@@ -2229,10 +2229,10 @@ var element = $('#6ad04476-4c4a-404c-a762-baf301d56e32');
 
 
 
-<div id="47b89c4c-b397-43ea-a596-aa4d56271bcd"></div>
+<div id="b963389c-a44c-4c51-8f3f-4b3ceef8d717"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#47b89c4c-b397-43ea-a596-aa4d56271bcd');
+var element = $('#b963389c-a44c-4c51-8f3f-4b3ceef8d717');
 
             setTimeout(function() {
                 var nbb_cell_id = 11;
@@ -2308,10 +2308,10 @@ var element = $('#47b89c4c-b397-43ea-a596-aa4d56271bcd');
 
 
 
-<div id="5ae31c20-eede-4707-9088-9aca95cfd44a"></div>
+<div id="b0756142-089a-49ed-a952-41cad58df0d1"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#5ae31c20-eede-4707-9088-9aca95cfd44a');
+var element = $('#b0756142-089a-49ed-a952-41cad58df0d1');
 
             setTimeout(function() {
                 var nbb_cell_id = 12;
@@ -2379,10 +2379,10 @@ var element = $('#5ae31c20-eede-4707-9088-9aca95cfd44a');
 
 
 
-<div id="65b4261c-c57d-4c44-98cb-48291e954de3"></div>
+<div id="c51353ba-c56e-4c29-8f93-700720213b01"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#65b4261c-c57d-4c44-98cb-48291e954de3');
+var element = $('#c51353ba-c56e-4c29-8f93-700720213b01');
 
             setTimeout(function() {
                 var nbb_cell_id = 13;
@@ -2449,10 +2449,10 @@ var element = $('#65b4261c-c57d-4c44-98cb-48291e954de3');
 
 
 
-<div id="49706f3c-eedf-4f52-9ad1-ddbed636854b"></div>
+<div id="a0096ec6-0593-40e2-8100-b1e42cc4345b"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#49706f3c-eedf-4f52-9ad1-ddbed636854b');
+var element = $('#a0096ec6-0593-40e2-8100-b1e42cc4345b');
 
             setTimeout(function() {
                 var nbb_cell_id = 14;
@@ -2552,10 +2552,10 @@ var element = $('#49706f3c-eedf-4f52-9ad1-ddbed636854b');
 
 
 
-<div id="a30933d3-281c-42df-abee-fe902c4ceefa"></div>
+<div id="3ed0b9e1-2866-4ea6-9bc7-1809467f2f02"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#a30933d3-281c-42df-abee-fe902c4ceefa');
+var element = $('#3ed0b9e1-2866-4ea6-9bc7-1809467f2f02');
 
             setTimeout(function() {
                 var nbb_cell_id = 21;
