--- a/tags.html
+++ b/tags.html
@@ -119,10 +119,10 @@
         </a>
       </li>
       <li>
-        <a class="sc-twitter"
-           href="https://twitter.com/leblancfg1"
+        <a class="sc-mastodon"
+rel="me"           href="https://fosstodon.org/@leblancfg"
            target="_blank">
-          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-mastodon"></i>
         </a>
       </li>
       <li>
@@ -165,6 +165,9 @@
           <li><a href="https://leblancfg.com/tag/crossfit.html">crossfit</a> (3)</li>
           <li><a href="https://leblancfg.com/tag/cuda.html">cuda</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/cudnn.html">cudnn</a> (1)</li>
+          <li><a href="https://leblancfg.com/tag/data-bus.html">data bus</a> (1)</li>
+          <li><a href="https://leblancfg.com/tag/data-engineering.html">data engineering</a> (1)</li>
+          <li><a href="https://leblancfg.com/tag/etl.html">etl</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/functional.html">functional</a> (3)</li>
           <li><a href="https://leblancfg.com/tag/geopandas.html">geopandas</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/gpu.html">GPU</a> (1)</li>
