--- a/authors.html
+++ b/authors.html
@@ -119,10 +119,10 @@
         </a>
       </li>
       <li>
-        <a class="sc-twitter"
-           href="https://twitter.com/leblancfg1"
+        <a class="sc-mastodon"
+rel="me"           href="https://fosstodon.org/@leblancfg"
            target="_blank">
-          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-mastodon"></i>
         </a>
       </li>
       <li>
@@ -155,7 +155,7 @@
   </header>
   <div>
     <ul class="list">
-      <li><a href="https://leblancfg.com/author/francois-leblanc.html">François Leblanc</a> (12)</li>
+      <li><a href="https://leblancfg.com/author/francois-leblanc.html">François Leblanc</a> (13)</li>
     </ul>
   </div>
 </article>
