--- a/categories.html
+++ b/categories.html
@@ -119,10 +119,10 @@
         </a>
       </li>
       <li>
-        <a class="sc-twitter"
-           href="https://twitter.com/leblancfg1"
+        <a class="sc-mastodon"
+rel="me"           href="https://fosstodon.org/@leblancfg"
            target="_blank">
-          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-mastodon"></i>
         </a>
       </li>
       <li>
@@ -157,6 +157,9 @@
     <ul class="list">
       <li>
         <a href="https://leblancfg.com/category/crossfit-python.html">CrossFit, Python</a> (3)
+      </li>
+      <li>
+        <a href="https://leblancfg.com/category/data-engineering.html">Data Engineering</a> (1)
       </li>
       <li>
         <a href="https://leblancfg.com/category/linux.html">Linux</a> (2)
