--- a/getting-started-with-python-and-jupyter-notebooks-2.html
+++ b/getting-started-with-python-and-jupyter-notebooks-2.html
@@ -134,10 +134,10 @@
         </a>
       </li>
       <li>
-        <a class="sc-twitter"
-           href="https://twitter.com/leblancfg1"
+        <a class="sc-mastodon"
+rel="me"           href="https://fosstodon.org/@leblancfg"
            target="_blank">
-          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-mastodon"></i>
         </a>
       </li>
       <li>
