--- a/benchmarks_writing_pandas_dataframe_SQL_Server.html
+++ b/benchmarks_writing_pandas_dataframe_SQL_Server.html
@@ -38,6 +38,7 @@
 
   <link href="https://leblancfg.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="leblancfg.com Atom">
 
+  <link href="https://leblancfg.com/feeds/all.rss.xml" type="application/rss+xml" rel="alternate" title="leblancfg.com RSS">
 
 <script type="text/javascript">
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -156,6 +157,7 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
 
   <a href="https://leblancfg.com/feeds/all.atom.xml">Atom</a>
 
+  <a href="https://leblancfg.com/feeds/all.rss.xml">RSS</a>
 </nav>
 
 <article class="single">
@@ -1379,10 +1381,10 @@ span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 
 
 
 
-<div id="514f4828-34d6-43f1-b405-e340edd0e7ac"></div>
+<div id="101a2a95-198f-45bf-9c77-5e931779ada1"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#514f4828-34d6-43f1-b405-e340edd0e7ac');
+var element = $('#101a2a95-198f-45bf-9c77-5e931779ada1');
 
             setTimeout(function() {
                 var nbb_cell_id = 1;
@@ -1466,10 +1468,10 @@ No sqlalchemy_turbodbc version available
 
 
 
-<div id="98ebc0b9-3be7-4357-ad56-c7d4eeacf28f"></div>
+<div id="c3bd2178-2821-4abe-8b6c-8125fd02fc0d"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#98ebc0b9-3be7-4357-ad56-c7d4eeacf28f');
+var element = $('#c3bd2178-2821-4abe-8b6c-8125fd02fc0d');
 
             setTimeout(function() {
                 var nbb_cell_id = 20;
@@ -1536,10 +1538,10 @@ var element = $('#98ebc0b9-3be7-4357-ad56-c7d4eeacf28f');
 
 
 
-<div id="6ea52194-6163-4c64-be48-26fb2234fa1e"></div>
+<div id="49d82133-58a7-4c90-9b3c-106a8c81f4cb"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#6ea52194-6163-4c64-be48-26fb2234fa1e');
+var element = $('#49d82133-58a7-4c90-9b3c-106a8c81f4cb');
 
             setTimeout(function() {
                 var nbb_cell_id = 3;
@@ -1717,10 +1719,10 @@ var element = $('#6ea52194-6163-4c64-be48-26fb2234fa1e');
 
 
 
-<div id="046ba03c-4b01-4ca2-8551-03d53953b140"></div>
+<div id="18b3a688-e2e7-43fc-b48d-f664413ac658"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#046ba03c-4b01-4ca2-8551-03d53953b140');
+var element = $('#18b3a688-e2e7-43fc-b48d-f664413ac658');
 
             setTimeout(function() {
                 var nbb_cell_id = 4;
@@ -1778,10 +1780,10 @@ var element = $('#046ba03c-4b01-4ca2-8551-03d53953b140');
 
 
 
-<div id="0024d3fd-eecd-4770-8dfb-ad77b657c7d4"></div>
+<div id="7d3aa633-b6c9-46d7-ac65-6e81dbbdc77c"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#0024d3fd-eecd-4770-8dfb-ad77b657c7d4');
+var element = $('#7d3aa633-b6c9-46d7-ac65-6e81dbbdc77c');
 
             setTimeout(function() {
                 var nbb_cell_id = 5;
@@ -1855,10 +1857,10 @@ var element = $('#0024d3fd-eecd-4770-8dfb-ad77b657c7d4');
 
 
 
-<div id="8d0eb26a-504a-4801-a29c-95726bc45dca"></div>
+<div id="ebcb3826-5d84-4b25-beae-3b3b14cd6f66"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#8d0eb26a-504a-4801-a29c-95726bc45dca');
+var element = $('#ebcb3826-5d84-4b25-beae-3b3b14cd6f66');
 
             setTimeout(function() {
                 var nbb_cell_id = 6;
@@ -1937,10 +1939,10 @@ var element = $('#8d0eb26a-504a-4801-a29c-95726bc45dca');
 
 
 
-<div id="a67bc9f3-8613-4dea-b06c-ddaffafd7db2"></div>
+<div id="9bff7558-c986-4936-b298-4b88ee964fb4"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#a67bc9f3-8613-4dea-b06c-ddaffafd7db2');
+var element = $('#9bff7558-c986-4936-b298-4b88ee964fb4');
 
             setTimeout(function() {
                 var nbb_cell_id = 7;
@@ -2002,10 +2004,10 @@ var element = $('#a67bc9f3-8613-4dea-b06c-ddaffafd7db2');
 
 
 
-<div id="38431e83-3619-403e-9318-7065c8aa7ab3"></div>
+<div id="efb86112-867d-4466-8adc-17a750d2687e"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#38431e83-3619-403e-9318-7065c8aa7ab3');
+var element = $('#efb86112-867d-4466-8adc-17a750d2687e');
 
             setTimeout(function() {
                 var nbb_cell_id = 8;
@@ -2073,10 +2075,10 @@ var element = $('#38431e83-3619-403e-9318-7065c8aa7ab3');
 
 
 
-<div id="384cd7de-87bb-4cbb-8a10-29970e707564"></div>
+<div id="e8727371-dd9b-4557-b0d9-49a7c6701621"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#384cd7de-87bb-4cbb-8a10-29970e707564');
+var element = $('#e8727371-dd9b-4557-b0d9-49a7c6701621');
 
             setTimeout(function() {
                 var nbb_cell_id = 9;
@@ -2151,10 +2153,10 @@ var element = $('#384cd7de-87bb-4cbb-8a10-29970e707564');
 
 
 
-<div id="8465b7bb-b31d-4dd6-956b-861d6ed7038a"></div>
+<div id="6a54fcc9-381c-49ea-b103-eedcb19cecb1"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#8465b7bb-b31d-4dd6-956b-861d6ed7038a');
+var element = $('#6a54fcc9-381c-49ea-b103-eedcb19cecb1');
 
             setTimeout(function() {
                 var nbb_cell_id = 10;
@@ -2229,10 +2231,10 @@ var element = $('#8465b7bb-b31d-4dd6-956b-861d6ed7038a');
 
 
 
-<div id="b963389c-a44c-4c51-8f3f-4b3ceef8d717"></div>
+<div id="5c1ffe68-d6cd-456e-9d00-093f2f312550"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#b963389c-a44c-4c51-8f3f-4b3ceef8d717');
+var element = $('#5c1ffe68-d6cd-456e-9d00-093f2f312550');
 
             setTimeout(function() {
                 var nbb_cell_id = 11;
@@ -2308,10 +2310,10 @@ var element = $('#b963389c-a44c-4c51-8f3f-4b3ceef8d717');
 
 
 
-<div id="b0756142-089a-49ed-a952-41cad58df0d1"></div>
+<div id="b63a5306-118f-4c58-b660-552b04a0b452"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#b0756142-089a-49ed-a952-41cad58df0d1');
+var element = $('#b63a5306-118f-4c58-b660-552b04a0b452');
 
             setTimeout(function() {
                 var nbb_cell_id = 12;
@@ -2379,10 +2381,10 @@ var element = $('#b0756142-089a-49ed-a952-41cad58df0d1');
 
 
 
-<div id="c51353ba-c56e-4c29-8f93-700720213b01"></div>
+<div id="c187f91b-ed5e-49da-8923-43aaaf9ca923"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#c51353ba-c56e-4c29-8f93-700720213b01');
+var element = $('#c187f91b-ed5e-49da-8923-43aaaf9ca923');
 
             setTimeout(function() {
                 var nbb_cell_id = 13;
@@ -2449,10 +2451,10 @@ var element = $('#c51353ba-c56e-4c29-8f93-700720213b01');
 
 
 
-<div id="a0096ec6-0593-40e2-8100-b1e42cc4345b"></div>
+<div id="5e5e5f4d-62d4-49f6-a54c-d33ef2ca7e82"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#a0096ec6-0593-40e2-8100-b1e42cc4345b');
+var element = $('#5e5e5f4d-62d4-49f6-a54c-d33ef2ca7e82');
 
             setTimeout(function() {
                 var nbb_cell_id = 14;
@@ -2552,10 +2554,10 @@ var element = $('#a0096ec6-0593-40e2-8100-b1e42cc4345b');
 
 
 
-<div id="3ed0b9e1-2866-4ea6-9bc7-1809467f2f02"></div>
+<div id="b1f4b03d-26e8-40c3-b4f9-edd222f6e2d6"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#3ed0b9e1-2866-4ea6-9bc7-1809467f2f02');
+var element = $('#b1f4b03d-26e8-40c3-b4f9-edd222f6e2d6');
 
             setTimeout(function() {
                 var nbb_cell_id = 21;
