--- a/unhashable-python-unique-locations-geometry-geodataframe.html
+++ b/unhashable-python-unique-locations-geometry-geodataframe.html
@@ -38,6 +38,7 @@
 
   <link href="https://leblancfg.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="leblancfg.com Atom">
 
+  <link href="https://leblancfg.com/feeds/all.rss.xml" type="application/rss+xml" rel="alternate" title="leblancfg.com RSS">
 
 <script type="text/javascript">
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -158,6 +159,7 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
 
   <a href="https://leblancfg.com/feeds/all.atom.xml">Atom</a>
 
+  <a href="https://leblancfg.com/feeds/all.rss.xml">RSS</a>
 </nav>
 
 <article class="single">
