--- a/data-bus-pattern-for-data-engineering.html
+++ b/data-bus-pattern-for-data-engineering.html
@@ -240,7 +240,7 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
     - impute_from_mean: 4
 </code></pre></div>
 
-<p>So if you're working on similar projects, I'll have convinced you that the data bus pattern is a simple but powerful way to organize and manage the data and metadata in your code. Whether you're working on an ETL project or something else entirely, I highly recommend giving the data bus a try. It will make your code more readable, maintainable, and effective.</p>
+<p>So if you're working on similar projects, I hope I'll have convinced you that the data bus pattern is a simple but powerful way to organize and manage both the data and metadata in your code. Whether you're working on an ETL project or something else entirely, I highly recommend giving the data bus a try. It will make your code more readable, maintainable, and effective.</p>
   </div>
   <div class="tag-cloud">
     <p>
