Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -158,6 +158,11 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
   <div>
     <dl>
 
+          <dt>March 22, 2023</dt>
+
+        <dd>
+          <a href="https://leblancfg.com/til-nerdtree-bookmarks.html">TIL: NERDTree Bookmarks</a>
+        </dd>
           <dt>December 07, 2022</dt>
 
         <dd>
