--- a/tags.html
+++ b/tags.html
@@ -162,6 +162,7 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
           <li><a href="https://leblancfg.com/tag/azure.html">azure</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/beginner.html">beginner</a> (2)</li>
           <li><a href="https://leblancfg.com/tag/benchmarks.html">benchmarks</a> (3)</li>
+          <li><a href="https://leblancfg.com/tag/bookmarks.html">bookmarks</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/cli.html">cli</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/conda.html">conda</a> (2)</li>
           <li><a href="https://leblancfg.com/tag/crossfit.html">crossfit</a> (3)</li>
@@ -179,6 +180,7 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
           <li><a href="https://leblancfg.com/tag/manjaro.html">manjaro</a> (2)</li>
           <li><a href="https://leblancfg.com/tag/matplotlib.html">matplotlib</a> (2)</li>
           <li><a href="https://leblancfg.com/tag/mutability.html">mutability</a> (1)</li>
+          <li><a href="https://leblancfg.com/tag/nerdtree.html">nerdtree</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/numpy.html">numpy</a> (5)</li>
           <li><a href="https://leblancfg.com/tag/nvidia.html">nvidia</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/python.html">python</a> (10)</li>
@@ -187,6 +189,7 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
           <li><a href="https://leblancfg.com/tag/sql-server.html">SQL Server</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/summary-statistics.html">summary statistics</a> (3)</li>
           <li><a href="https://leblancfg.com/tag/tensorflow.html">tensorflow</a> (1)</li>
+          <li><a href="https://leblancfg.com/tag/vim.html">vim</a> (1)</li>
     </ul>
   </div>
 </article>
