--- a/categories.html
+++ b/categories.html
@@ -172,6 +172,9 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
       <li>
         <a href="https://leblancfg.com/category/python-sql-ms.html">Python, SQL, MS</a> (1)
       </li>
+      <li>
+        <a href="https://leblancfg.com/category/vim.html">Vim</a> (1)
+      </li>
     </ul>
   </div>
 </article>
