Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -161,7 +161,7 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
           <dt>April 29, 2023</dt>
 
         <dd>
-          <a href="https://leblancfg.com/level-up-your-command-line-skills-the-secret-to-being-a-good-unix-neighbour.html">Level up your command line skills: The secret to being a good UNIX neighbour</a>
+          <a href="https://leblancfg.com/being-a-good-unix-neighbour.html">Being a good UNIX neighbour</a>
         </dd>
           <dt>March 22, 2023</dt>
 
