--- a/being-a-good-unix-neighbour.html
+++ b/being-a-good-unix-neighbour.html
@@ -58,10 +58,10 @@
 
 
   <meta property="og:site_name" content="leblancfg.com"/>
-  <meta property="og:title" content="Level up your command line skills: The secret to being a good UNIX neighbour"/>
+  <meta property="og:title" content="Being a good UNIX neighbour"/>
   <meta property="og:description" content="A few tips to be a good UNIX neighbour and make your scripts more portable."/>
   <meta property="og:locale" content="en_US"/>
-  <meta property="og:url" content="https://leblancfg.com/level-up-your-command-line-skills-the-secret-to-being-a-good-unix-neighbour.html"/>
+  <meta property="og:url" content="https://leblancfg.com/being-a-good-unix-neighbour.html"/>
   <meta property="og:type" content="article"/>
   <meta property="article:published_time" content="2023-04-29 00:00:00-04:00"/>
   <meta property="article:modified_time" content=""/>
@@ -79,7 +79,7 @@
   <meta property="article:tag" content="python"/>
   <meta property="og:image" content="https://avatars0.githubusercontent.com/u/15659410?s=400&u=e3bc92486becb34e77028eef0f4dfc302540fcb3&v=4">
 
-  <title>leblancfg.com &ndash; Level up your command line skills: The secret to being a good UNIX neighbour</title>
+  <title>leblancfg.com &ndash; Being a good UNIX neighbour</title>
 
 
 </head>
@@ -171,7 +171,7 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
 <article class="single">
   <header>
       
-    <h1 id="level-up-your-command-line-skills-the-secret-to-being-a-good-unix-neighbour">Level up your command line skills: The secret to being a good UNIX neighbour</h1>
+    <h1 id="being-a-good-unix-neighbour">Being a good UNIX neighbour</h1>
     <p>
       Posted on April 29, 2023 in <a href="https://leblancfg.com/category/cli-unix.html">cli, unix</a>
 
