--- a/getting-started-with-python-and-jupyter-notebooks-1.html
+++ b/getting-started-with-python-and-jupyter-notebooks-1.html
@@ -114,7 +114,7 @@
             </li>
 
           <li>
-            <a target="_self" href="https://leblancfg.resumeed.com/" >Résumé</a>
+            <a target="_self" href="https://leblancfg.com/pages/leblancfg_CV.pdf" >Résumé</a>
           </li>
       </ul>
     </nav>
