--- a/higher-level-functions-python-map.html
+++ b/higher-level-functions-python-map.html
@@ -111,7 +111,7 @@
             </li>
 
           <li>
-            <a target="_self" href="https://leblancfg.resumeed.com/" >Résumé</a>
+            <a target="_self" href="https://leblancfg.com/pages/leblancfg_CV.pdf" >Résumé</a>
           </li>
       </ul>
     </nav>
