--- a/installing-azure-cli-on-manjaro-arch-with-anaconda.html
+++ b/installing-azure-cli-on-manjaro-arch-with-anaconda.html
@@ -111,7 +111,7 @@
             </li>
 
           <li>
-            <a target="_self" href="https://leblancfg.resumeed.com/" >Résumé</a>
+            <a target="_self" href="https://leblancfg.com/pages/leblancfg_CV.pdf" >Résumé</a>
           </li>
       </ul>
     </nav>
