--- a/installing-cuda-cudnn-tensorflow-nvidia-gtx960.html
+++ b/installing-cuda-cudnn-tensorflow-nvidia-gtx960.html
@@ -114,7 +114,7 @@
             </li>
 
           <li>
-            <a target="_self" href="https://leblancfg.resumeed.com/" >Résumé</a>
+            <a target="_self" href="https://leblancfg.com/pages/leblancfg_CV.pdf" >Résumé</a>
           </li>
       </ul>
     </nav>
