--- a/til-nerdtree-bookmarks.html
+++ b/til-nerdtree-bookmarks.html
@@ -109,7 +109,7 @@
             </li>
 
           <li>
-            <a target="_self" href="https://leblancfg.resumeed.com/" >Résumé</a>
+            <a target="_self" href="https://leblancfg.com/pages/leblancfg_CV.pdf" >Résumé</a>
           </li>
       </ul>
     </nav>
