Generate Pelican site

--- a/pages/about.html
+++ b/pages/about.html
@@ -162,12 +162,12 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
 <p>I’m interested in data, Earth Observation, statistical learning, evolution, biological and theoretical physics, machine learning, food science, and more specifically looking to further explore geospatial analysis, decision support, and adaptive learning.</p>
 <p>I am currently employed at Shopify as a Data Scientist, having a blast being part of People Analytics. I previously worked for the Canadian Space Agency, Environment and Climate Change Canada, and the Treasury Board of Canada Secretariat. Before that, I spent many years playing music and tending bar.</p>
 <p>In my free time, I enjoy reading (mostly sci-fi), Crossfit, conversation, cycling, musical exploration, and anything food-related &mdash; from amazing cocktails, weird DIY pickles, to making the perfect pork shoulder. I share this passion with my wife, who runs a wonderful <a href="https://squeezemylemon.ca">blog chronicling her culinary experiences</a>. People I look up to include Frank Zappa, Richard Feynman, J.K. Rowling, Peter Norvig, and Geoffrey Hinton.</p>
-<p>You can take a look at my résumé by clicking <a href="leblancfg_CV.pdf">here</a>.</p>  </div>
+<p>You can take a look at my résumé (now 3 years out of date 😞) by clicking <a href="leblancfg_CV.pdf">here</a>.</p>  </div>
 </article>
 
 <footer>
 <p>
-  &copy; 2019  - This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/deed.en_US" target="_blank">Creative Commons Attribution-ShareAlike</a>
+  &copy; 2023  - This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/deed.en_US" target="_blank">Creative Commons Attribution-ShareAlike</a>
 </p>
 <p>
 Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a href="http://bit.ly/flex-pelican" target="_blank">Flex</a> theme
