Generate Pelican site

--- a/level-up-your-command-line-skills-the-secret-to-being-a-good-unix-neighbour.html
+++ b/level-up-your-command-line-skills-the-secret-to-being-a-good-unix-neighbour.html
@@ -195,7 +195,7 @@ xargs -I <span class="o">{}</span> curl -X POST -H <span class="s2">&quot;Conten
 <li>We download the HTML page for the GOOG stock.</li>
 <li>Extract the current price.</li>
 <li>Update the price of the GOOG stock in our database.</li>
-<li>If the price is above 9000, we send a notification to our API to sell stocks.</li>
+<li>If the price is over 9000, we send a notification to our API to sell stocks.</li>
 </ol>
 <p>Getting back to the UNIX philosophy, this means writing small programs that do
 one thing well and can be combined with other programs to achieve more complex
