Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -158,6 +158,11 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
   <div>
     <dl>
 
+          <dt>June 30, 2023</dt>
+
+        <dd>
+          <a href="https://leblancfg.com/automating-command-execution-across-tmux-panes.html">TIL: Automating Command Execution Across All Tmux Panes</a>
+        </dd>
           <dt>April 29, 2023</dt>
 
         <dd>
