--- a/tags.html
+++ b/tags.html
@@ -190,13 +190,14 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
           <li><a href="https://leblancfg.com/tag/python.html">python</a> (11)</li>
           <li><a href="https://leblancfg.com/tag/scipy.html">scipy</a> (2)</li>
           <li><a href="https://leblancfg.com/tag/shapely.html">shapely</a> (1)</li>
-          <li><a href="https://leblancfg.com/tag/shell.html">shell</a> (1)</li>
+          <li><a href="https://leblancfg.com/tag/shell.html">shell</a> (2)</li>
           <li><a href="https://leblancfg.com/tag/sql-server.html">SQL Server</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/summary-statistics.html">summary statistics</a> (3)</li>
           <li><a href="https://leblancfg.com/tag/tensorflow.html">tensorflow</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/terminal.html">terminal</a> (1)</li>
+          <li><a href="https://leblancfg.com/tag/tmux.html">tmux</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/unix.html">unix</a> (1)</li>
-          <li><a href="https://leblancfg.com/tag/vim.html">vim</a> (1)</li>
+          <li><a href="https://leblancfg.com/tag/vim.html">vim</a> (2)</li>
           <li><a href="https://leblancfg.com/tag/zsh.html">zsh</a> (1)</li>
     </ul>
   </div>
