--- a/categories.html
+++ b/categories.html
@@ -176,6 +176,9 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
         <a href="https://leblancfg.com/category/python-sql-ms.html">Python, SQL, MS</a> (1)
       </li>
       <li>
+        <a href="https://leblancfg.com/category/tmux.html">Tmux</a> (1)
+      </li>
+      <li>
         <a href="https://leblancfg.com/category/vim.html">Vim</a> (1)
       </li>
     </ul>
